Fix sync performance and support JVM options